<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (C) 2009-2015 Felix Bechstein
-->
<!--
    This file is part of Call Meter NG. This program is free software; you
    can redistribute it and/or modify it under the terms of the GNU
    General Public License as published by the Free Software Foundation;
    either version 3 of the License, or (at your option) any later
    version.
-->
<!--
    This program is distributed in the hope that it will be useful, but
    WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
    General Public License for more details. You should have received a
    copy of the GNU General Public License along with this program; If
    not, see <http://www.gnu.org/licenses/>.
-->
<resources>
    <string name="about0_">Watch your call, message and data plans!</string>
    <string name="about0">CallMeter generates reports from call, message and data logs. It supports
        several modes of billing.
    </string>
    <string name="about1">The output format is usage / time or count used this billing period / time
        or count overall. Monthly time calculation takes the billing mode into account. Overall does
        not.
    </string>
    <string name="about2">The billing mode specifies the length of the first / next billing
        intervals. E.g. 60/10 means every call is billed for minimum 60s, any longer call is rounded
        up to next full 10s.
    </string>
    <string name="about3">You can split your call or message plan into up to two plans. Each plan
        can be set to be totally free, capped to a set limit or unlimited.
    </string>
    <string name="about4">Your messages can be merged into your call plan. E.g. counting every
        message as a 15s call.
    </string>
    <string name="about5">CallMeter runs in background every 30min (only if not in standby). This
        means, that deleting calls or messages older than 30min will not change your stats. Deleting
        calls or messages younger than 30min may result in wrong statistics.
    </string>
    <string name="about6_">What does CallMeter NG not do:</string>
    <string name="about6">There is no way to distinguish between sipdroid and real calls or between
        websms and real sms. Android\'s seamless integration of these apps makes it impossible to
        retrieve application-specific data from call logs.
    </string>
    <string name="send_">Send</string>
    <string name="settings">Preferences</string>
    <string name="about_">About</string>
    <string name="about_hint">About this app</string>
    <string name="faq_hint">Some tips and tricks, how to set up this app.</string>
    <string name="feedback_">Feedback</string>
    <string name="feedback_hint">Report bugs, request features ...</string>
    <string name="more_">More Apps..</string>
    <string name="billday_">First day of your bill</string>
    <string name="billmode_">Mode of billing</string>
    <string name="billmode_hint">Length of first/following billing intervals.</string>
    <string name="billdate_">Start of billing period:</string>
    <string name="smsperiod_">Same Period for SMS</string>
    <string name="smsperiod_hint">Set SMS\'s billing period to calls\' period.</string>
    <string name="smsbillday_">First day of your SMS bill</string>
    <string name="dataperiod_">Same Period for data</string>
    <string name="dataperiod_hint">Set data\'s billing period to calls\' period.</string>
    <string name="databillday_">First day of your data bill</string>
    <string name="appearance_">Appearance</string>
    <string name="theme_">Theme</string>
    <string name="textsize_">Text size</string>
    <string name="advanced_">Advanced</string>
    <string name="exclude_people_">Exclude numbers</string>
    <string name="exclude_people_hint">Don\'t bill some numbers\nwildcards allowed: *555, 555* or
        *555*
    </string>
    <string name="exclude_people_add">Add number</string>
    <string name="exclude_people_edit">Edit</string>
    <string name="exclude_people_delete">Delete</string>
    <string name="exclude_people_to_plan1_">Excluded numbers to plan #1</string>
    <string name="exclude_people_to_plan2_">Excluded numbers to plan #2</string>
    <string name="exclude_people_calls_">Enable for Calls</string>
    <string name="exclude_people_calls_to_plan1_hint">Bill calls to/from excluded numbers in plan
        #1
    </string>
    <string name="exclude_people_calls_to_plan2_hint">Bill calls to/from excluded numbers in plan
        #2
    </string>
    <string name="exclude_people_sms_">Enable for SMS</string>
    <string name="exclude_people_sms_to_plan1_hint">Bill messages to/from excluded numbers in plan
        #1
    </string>
    <string name="exclude_people_sms_to_plan2_hint">Bill messages to/from excluded numbers in plan
        #2
    </string>
    <string name="plans">Plans</string>
    <string name="plans_split">Split plans</string>
    <string name="plans_merge">Merge plans</string>
    <string name="plans_split_hint">Split plan into two different billed plans.</string>
    <string name="plan1">Plan 1</string>
    <string name="plan2">Plan 2</string>
    <string name="plan1_hint">Check hours to include calls/sms into first plan. All others will go
        into second plan.
    </string>
    <string name="plan_free_">No billing</string>
    <string name="plan_freemin_">Free Minutes</string>
    <string name="plan_freesms_">Free SMS</string>
    <string name="free_hint">Totally free</string>
    <string name="freemin_hint">Free Minutes / Month</string>
    <string name="freesms_hint">Free SMS / Month</string>
    <string name="bill_calls_incoming_">Bill incoming</string>
    <string name="bill_calls_incoming_hint">Bill incoming calls as well.</string>
    <string name="bill_sms_incoming_">Bill incoming</string>
    <string name="bill_sms_incoming_hint">Bill incoming sms as well.</string>
    <string name="bill_data_incoming_only_">Bill incoming only</string>
    <string name="bill_data_incoming_only_hint">Bill only incoming traffic.</string>
    <string name="cost_per_call_">Cost per call</string>
    <string name="cost_per_call_hint">Each call will be billed with this.</string>
    <string name="cost_per_minute_">Cost per minute</string>
    <string name="cost_per_minute_hint">Each minute of a call will be billed with this.</string>
    <string name="cost_per_sms_">Cost per SMS</string>
    <string name="cost_per_sms_hint">Each SMS will be billed with this.</string>
    <string name="cost_per_mb_">Cost per MB</string>
    <string name="cost_per_mb_hint">Each MB of the traffic will be billed with this.</string>
    <string name="merge_sms_calls_">Merge SMS into calls</string>
    <string name="merge_sms_calls_hint">Bill SMS as part of calls.</string>
    <string name="merge_sms_calls_sec_">Seconds / SMS</string>
    <string name="merge_sms_calls_sec_hint">Number of seconds billed for a single sms.</string>
    <string name="merge_sms_plan1_">Merge SMS into plan 1</string>
    <string name="merge_sms_plan1_hint">Uncheck to merge them into plan 2.</string>
    <string name="data_hint">WLAN/WIFI stats are not collected here!</string>
    <string name="data_enable_">Show data stats</string>
    <string name="data_enable_hint">Data is collected in real time. First month may be incorrect!
    </string>
    <string name="data_show_simple_">Show only \"Data\" as title</string>
    <string name="data_show_simple_hint">Hide \"(2G/3G/4G)\" in title. This does not affect stats.
    </string>
    <string name="data_each_day">Bill each day separately</string>
    <string name="data_each_day_hint">Your billing period starts with each day.</string>
    <string name="data_limit_">Limit</string>
    <string name="data_limit_hint">Limit of data plan (MB/month)</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="calls">Calls</string>
    <string name="sms">SMS</string>
    <string name="data">Data</string>
    <string name="data_">Data (2G/3G/4G)</string>
    <string name="calls_sms">Calls/SMS</string>
    <string name="in_calls">In%s:</string>
    <string name="in_sms">In%s:</string>
    <string name="in_data">In:</string>
    <string name="out_calls">Out%s:</string>
    <string name="out_sms">Out%s:</string>
    <string name="out_data">Out:</string>
    <string name="plan_name1_">Plan 1: name</string>
    <string name="plan_name2_">Plan 2: name</string>
    <string name="plan_name_hint">Custom Name</string>
    <string name="reset_data_">Reset statistics</string>
    <string name="reset_data_hint">Resetting call/sms data will result in recalculation of the
        statistics.\n\nResetting traffic statistics is permanent. It only resets traffic done before
        boot!
    </string>
    <string name="reset_data_data_">Reset traffic too.</string>
    <string name="contacts_">Contacts</string>
    <string-array name="themes">
        <item>Black</item>
        <item>Light</item>
    </string-array>
    <string-array name="textsize">
        <item>Small</item>
        <item>Medium</item>
    </string-array>
    <string name="debug_">Debug</string>
    <string name="send_logs_">Send logs</string>
    <string name="send_logs_hint">Send your device\'s logs to the developer.\nDo this only if you
        were asked to do so.
    </string>
    <string name="sendlog_run_">Run SendLog</string>
    <string name="sendlog_run">SendLog will collect the device log and send it to the
        developer.\nYou will have an opportunity to review and modify the data being sent.
    </string>
    <string name="sendlog_install_">Install SendLog</string>
    <string name="sendlog_install">Install the free SendLog application to collect the device log
        and send it to the developer.
    </string>
    <string name="license_">License:</string>
    <string name="license">GPLv3 - see http://www.gnu.org/licenses/gpl-3.0.txt</string>
    <string name="author_">Author:</string>
    <string name="website_">Website:</string>
    <string name="changelog_" translatable="false">Changelog</string>
    <string formatted="false" name="permissions_">Permissions</string>
    <string formatted="false" name="permissions_read_contacts">Read contacts: this permission is necessary to resolve excluded phone numbers to contacts.\nThe app works without this permission.</string>
    <string formatted="false" name="permissions_read_sms">Read SMS: this permission is necessary to read SMS stats from phone\'s database.\nThe app does not work without this permission.</string>
    <string formatted="false" name="permissions_read_call_log">Read call log: this permission is necessary to read call stats from phone\'s database.\nThe app does not work without this permission.</string>
</resources>
