<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android">
	<PreferenceCategory
		android:title="@string/settings"
	>    
		<ListPreference
			android:key="billday"
			android:title="@string/billday_"
			android:entries="@array/days"
			android:entryValues="@array/days"
			android:dialogTitle="@string/billday_"
		/>
		<ListPreference
			android:key="billmode"
			android:title="@string/billmode_"
			android:entries="@array/modes_"
			android:entryValues="@array/modes"
			android:dialogTitle="@string/billmode_"
		/>
		<PreferenceScreen
			android:title="@string/freedays_"
		>
			<CheckBoxPreference
				android:key="freedays_call"
				android:title="@string/free_on_calls"
			/>
			<CheckBoxPreference
				android:key="freedays_sms"
				android:title="@string/free_on_sms"
			/>
			<CheckBoxPreference
				android:key="freedays_1"
				android:title="@string/monday"
			/>
			<CheckBoxPreference
				android:key="freedays_2"
				android:title="@string/tuesday"
			/>
			<CheckBoxPreference
				android:key="freedays_3"
				android:title="@string/wednesday"
			/>
			<CheckBoxPreference
				android:key="freedays_4"
				android:title="@string/thursday"
			/>
			<CheckBoxPreference
				android:key="freedays_5"
				android:title="@string/friday"
			/>
			<CheckBoxPreference
				android:key="freedays_6"
				android:title="@string/saturday"
			/>
			<CheckBoxPreference
				android:key="freedays_7"
				android:title="@string/sunday"
			/>
		</PreferenceScreen>
		<CheckBoxPreference
			android:key="smsperiod"
			android:disableDependentsState="true"
			android:title="@string/smsperiod_"
		/>
		<ListPreference
			android:dependency="smsperiod"
			android:key="smsbillday"
			android:title="@string/smsbillday_"
			android:entries="@array/days"
			android:entryValues="@array/days"
			android:dialogTitle="@string/smsbillday_"
		/>
		<EditTextPreference
			android:key="freemin"
			android:title="@string/freemin_"
			android:dialogTitle="@string/freemin_"
			android:inputType="number"
		/>
		<EditTextPreference
			android:key="freesms"
			android:title="@string/freesms_"
			android:dialogTitle="@string/freesms_"
			android:inputType="number"
		/>
	</PreferenceCategory>
</PreferenceScreen>
