<?xml version="1.0" encoding="utf-8"?>
	<!--
		Copyright (C) 2009-2011 Felix Bechstein
	-->
	<!--
		This file is part of Call Meter NG. This program is free software; you
		can redistribute it and/or modify it under the terms of the GNU
		General Public License as published by the Free Software Foundation;
		either version 3 of the License, or (at your option) any later
		version.
	-->
	<!--
		This program is distributed in the hope that it will be useful, but
		WITHOUT ANY WARRANTY; without even the implied warranty of
		MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
		General Public License for more details. You should have received a
		copy of the GNU General Public License along with this program; If
		not, see <http://www.gnu.org/licenses/>.
	-->
<RelativeLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:layout_height="fill_parent" android:layout_width="fill_parent"
		android:background="?android:attr/colorBackground">

	<de.ub0r.android.eucookieconsent.EuCookieConsentView
			android:id="@+id/cookie_consent"
			android:layout_alignParentBottom="true"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:paddingLeft="8dp"
			android:paddingRight="8dp"
			app:urlLeanMore="@string/privacy_policy_url"/>

	<com.google.android.gms.ads.AdView
			android:id="@+id/ad"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_above="@+id/cookie_consent"
			android:cacheColorHint="?android:attr/colorBackground"
			android:gravity="center_horizontal"
			app:adUnitId="ca-app-pub-1948477123608376/9772134085"
			app:adSize="SMART_BANNER"/>

	<ScrollView android:layout_height="fill_parent"
		android:layout_width="fill_parent" android:layout_above="@+id/ad">
		<LinearLayout android:layout_height="wrap_content"
			android:layout_width="fill_parent" android:orientation="vertical"
			android:padding="5dip">

			<!--  calls common -->
			<TextView android:id="@+id/calls_" android:text="@string/calls"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:gravity="center" android:textStyle="bold"
				android:textAppearance="?android:attr/textAppearanceMedium" />

			<LinearLayout android:layout_height="wrap_content"
				android:layout_width="fill_parent">
				<TextView android:id="@+id/calls_billdate_" android:text="@string/billdate_"
					android:layout_width="wrap_content" android:layout_height="wrap_content" />
				<TextView android:id="@+id/calls_billdate" android:gravity="right"
					android:layout_width="fill_parent" android:layout_height="wrap_content" />
			</LinearLayout>
			<ProgressBar android:id="@+id/calls_progressbar_date"
				android:layout_width="fill_parent" android:layout_height="5dip"
				android:paddingLeft="10dip" android:paddingRight="10dip"
				android:layout_marginTop="1dip" android:max="100"
				style="?android:attr/progressBarStyleHorizontal" />

			<!-- real calls -->
			<!--  calls1 -->
			<LinearLayout android:layout_height="wrap_content"
				android:layout_width="fill_parent">
				<TextView android:id="@+id/calls1_in_" android:text="@string/in_calls"
					android:paddingLeft="5dip" android:layout_width="wrap_content"
					android:layout_height="wrap_content" />
				<TextView android:id="@+id/calls1_in" android:gravity="right"
					android:layout_width="fill_parent" android:layout_height="wrap_content" />
			</LinearLayout>

			<LinearLayout android:layout_height="wrap_content"
				android:layout_width="fill_parent">
				<TextView android:id="@+id/calls1_out_" android:text="@string/out_calls"
					android:paddingLeft="5dip" android:layout_width="wrap_content"
					android:layout_height="wrap_content" />
				<TextView android:id="@+id/calls1_out" android:gravity="right"
					android:layout_width="fill_parent" android:layout_height="wrap_content" />
			</LinearLayout>
			<ProgressBar android:id="@+id/calls1_progressbar"
				android:layout_width="fill_parent" android:layout_height="15dip"
				android:layout_marginTop="3dip" android:paddingLeft="10dip"
				android:paddingRight="10dip" android:max="100"
				style="?android:attr/progressBarStyleHorizontal" />
			<TextView android:id="@+id/calls1_progressbar_text"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:gravity="center" android:visibility="gone" />

			<!--  calls2 -->
			<LinearLayout android:id="@+id/calls2_view"
				android:layout_height="wrap_content" android:layout_width="fill_parent"
				android:orientation="vertical">
				<LinearLayout android:layout_height="wrap_content"
					android:layout_width="fill_parent">
					<TextView android:id="@+id/calls2_in_" android:text="@string/in_calls"
						android:paddingLeft="5dip" android:layout_width="wrap_content"
						android:layout_height="wrap_content" />
					<TextView android:id="@+id/calls2_in" android:gravity="right"
						android:layout_width="fill_parent" android:layout_height="wrap_content" />
				</LinearLayout>
				<LinearLayout android:layout_height="wrap_content"
					android:layout_width="fill_parent">
					<TextView android:id="@+id/calls2_out_" android:text="@string/out_calls"
						android:paddingLeft="5dip" android:layout_width="wrap_content"
						android:layout_height="wrap_content" />
					<TextView android:id="@+id/calls2_out" android:gravity="right"
						android:layout_width="fill_parent" android:layout_height="wrap_content" />
				</LinearLayout>

				<ProgressBar android:id="@+id/calls2_progressbar"
					android:layout_width="fill_parent" android:layout_height="15dip"
					android:layout_marginTop="3dip" android:paddingLeft="10dip"
					android:paddingRight="10dip" android:max="100"
					style="?android:attr/progressBarStyleHorizontal" />
				<TextView android:id="@+id/calls2_progressbar_text"
					android:layout_width="fill_parent" android:layout_height="wrap_content"
					android:gravity="center" android:visibility="gone" />
			</LinearLayout>

			<!--  end calls -->
			<!--  sms common-->

			<TextView android:id="@+id/sms_" android:text="@string/sms"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:paddingTop="10dip" android:gravity="center"
				android:textStyle="bold" android:textAppearance="?android:attr/textAppearanceMedium" />

			<LinearLayout android:layout_height="wrap_content"
				android:layout_width="fill_parent">
				<TextView android:id="@+id/sms_billdate_" android:text="@string/billdate_"
					android:layout_width="wrap_content" android:layout_height="wrap_content" />
				<TextView android:id="@+id/sms_billdate" android:gravity="right"
					android:layout_width="fill_parent" android:layout_height="wrap_content" />
			</LinearLayout>
			<ProgressBar android:id="@+id/sms_progressbar_date"
				android:layout_width="fill_parent" android:layout_height="5dip"
				android:paddingLeft="10dip" android:paddingRight="10dip"
				android:layout_marginTop="1dip" android:max="100"
				style="?android:attr/progressBarStyleHorizontal" />

			<!-- real sms -->

			<!-- sms1 -->
			<LinearLayout android:layout_height="wrap_content"
				android:layout_width="fill_parent">
				<TextView android:id="@+id/sms1_in_" android:text="@string/in_sms"
					android:paddingLeft="5dip" android:layout_width="wrap_content"
					android:layout_height="wrap_content" />
				<TextView android:id="@+id/sms1_in" android:gravity="right"
					android:layout_width="fill_parent" android:layout_height="wrap_content" />
			</LinearLayout>

			<LinearLayout android:layout_height="wrap_content"
				android:layout_width="fill_parent">
				<TextView android:id="@+id/sms1_out_" android:text="@string/out_sms"
					android:paddingLeft="5dip" android:layout_width="wrap_content"
					android:layout_height="wrap_content" />
				<TextView android:id="@+id/sms1_out" android:gravity="right"
					android:layout_width="fill_parent" android:layout_height="wrap_content" />
			</LinearLayout>
			<ProgressBar android:id="@+id/sms1_progressbar"
				android:layout_width="fill_parent" android:layout_height="15dip"
				android:layout_marginTop="3dip" android:paddingLeft="10dip"
				android:paddingRight="10dip" android:max="100"
				style="?android:attr/progressBarStyleHorizontal" />
			<TextView android:id="@+id/sms1_progressbar_text"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:gravity="center" android:visibility="gone" />

			<!-- sms2 -->
			<LinearLayout android:id="@+id/sms2_view"
				android:layout_height="wrap_content" android:layout_width="fill_parent"
				android:orientation="vertical">
				<LinearLayout android:layout_height="wrap_content"
					android:layout_width="fill_parent">
					<TextView android:id="@+id/sms2_in_" android:text="@string/in_sms"
						android:paddingLeft="5dip" android:layout_width="wrap_content"
						android:layout_height="wrap_content" />
					<TextView android:id="@+id/sms2_in" android:gravity="right"
						android:layout_width="fill_parent" android:layout_height="wrap_content" />
				</LinearLayout>
				<LinearLayout android:layout_height="wrap_content"
					android:layout_width="fill_parent">
					<TextView android:id="@+id/sms2_out_" android:text="@string/out_sms"
						android:paddingLeft="5dip" android:layout_width="wrap_content"
						android:layout_height="wrap_content" />
					<TextView android:id="@+id/sms2_out" android:gravity="right"
						android:layout_width="fill_parent" android:layout_height="wrap_content" />
				</LinearLayout>

				<ProgressBar android:id="@+id/sms2_progressbar"
					android:layout_width="fill_parent" android:layout_height="15dip"
					android:layout_marginTop="3dip" android:paddingLeft="10dip"
					android:paddingRight="10dip" android:max="100"
					style="?android:attr/progressBarStyleHorizontal" />
				<TextView android:id="@+id/sms2_progressbar_text"
					android:layout_width="fill_parent" android:layout_height="wrap_content"
					android:gravity="center" android:visibility="gone" />
			</LinearLayout>
			<!-- end sms -->
			<!--  data common-->

			<TextView android:id="@+id/data_" android:text="@string/data_"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:paddingTop="10dip" android:gravity="center"
				android:textStyle="bold" android:visibility="gone"
				android:textAppearance="?android:attr/textAppearanceMedium" />

			<LinearLayout android:layout_height="wrap_content"
				android:layout_width="fill_parent" android:id="@+id/data_billdate_layout"
				android:visibility="gone">
				<TextView android:id="@+id/data_billdate_" android:text="@string/billdate_"
					android:layout_width="wrap_content" android:layout_height="wrap_content" />
				<TextView android:id="@+id/data_billdate" android:gravity="right"
					android:layout_width="fill_parent" android:layout_height="wrap_content" />
			</LinearLayout>
			<ProgressBar android:id="@+id/data_progressbar_date"
				android:layout_width="fill_parent" android:layout_height="5dip"
				android:paddingLeft="10dip" android:paddingRight="10dip"
				android:layout_marginTop="1dip" android:max="100"
				style="?android:attr/progressBarStyleHorizontal" />

			<!-- real data -->

			<LinearLayout android:layout_height="wrap_content"
				android:layout_width="fill_parent" android:id="@+id/data_in_layout"
				android:visibility="gone">
				<TextView android:id="@+id/data_in_" android:text="@string/in_data"
					android:paddingLeft="5dip" android:layout_width="wrap_content"
					android:layout_height="wrap_content" />
				<TextView android:id="@+id/data_in" android:gravity="right"
					android:layout_width="fill_parent" android:layout_height="wrap_content" />
			</LinearLayout>

			<LinearLayout android:layout_height="wrap_content"
				android:layout_width="fill_parent" android:id="@+id/data_out_layout"
				android:visibility="gone">
				<TextView android:id="@+id/data_out_" android:text="@string/out_data"
					android:paddingLeft="5dip" android:layout_width="wrap_content"
					android:layout_height="wrap_content" />
				<TextView android:id="@+id/data_out" android:gravity="right"
					android:layout_width="fill_parent" android:layout_height="wrap_content" />
			</LinearLayout>

			<ProgressBar android:id="@+id/data_progressbar"
				android:layout_width="fill_parent" android:layout_height="15dip"
				android:layout_marginTop="3dip" android:paddingLeft="10dip"
				android:paddingRight="10dip" android:max="100"
				style="?android:attr/progressBarStyleHorizontal" />
			<TextView android:id="@+id/data_progressbar_text"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:gravity="center" />

			<!-- end data -->
		</LinearLayout>
	</ScrollView>
</RelativeLayout>
